--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fsanitize=address")
 
 
 file(GLOB SOURCE_STAGES "problems-cpp/*.cpp")
+file(GLOB SOURCE_STAGES_TMPL "templates-cpp/*.cpp")
 
 if(MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
@@ -17,5 +18,10 @@ foreach( SRC_FILE_NAME ${SOURCE_STAGES} )
     get_filename_component( SRC_FILE_NAME_SHORT ${SRC_FILE_NAME} NAME_WE )
     add_executable( ${SRC_FILE_NAME_SHORT} ${SRC_FILE_NAME})
 endforeach( SRC_FILE_NAME ${SOURCE_STAGES} )
+
+foreach( SRC_FILE_NAME_TMPL ${SOURCE_STAGES_TMPL} )
+    get_filename_component( SRC_FILE_NAME_SHORT_TMPL ${SRC_FILE_NAME_TMPL} NAME_WE )
+    add_executable( ${SRC_FILE_NAME_SHORT_TMPL} ${SRC_FILE_NAME_TMPL})
+endforeach( SRC_FILE_NAME_TMPL ${SOURCE_STAGES_TMPL} )
 
 add_executable(rdgen "misc/rdgen.cpp")
